# mackerel-client-hs

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  mackerel-client.cabal  stack.yaml
.github/workflows/: ci.yaml
src/Web/: Mackerel.hs
src/Web/Mackerel/: Api.hs  Client.hs  Config.hs  Types.hs
src/Web/Mackerel/Api/: Alert.hs  Channel.hs  Dashboard.hs  GraphAnnotation.hs  Host.hs  Invitation.hs  Metadata.hs  Monitor.hs  Organization.hs  Role.hs  Service.hs  User.hs
src/Web/Mackerel/Internal/: Api.hs  TH.hs
src/Web/Mackerel/Types/: Alert.hs  Authority.hs  Channel.hs  Dashboard.hs  GraphAnnotation.hs  Host.hs  Invitation.hs  Metadata.hs  Monitor.hs  Organization.hs  Role.hs  Service.hs  User.hs
test/: ConfigSpec.hs
test/Types/: AlertSpec.hs  ChannelSpec.hs  DashboardSpec.hs  GraphAnnotationSpec.hs  HostSpec.hs  InvitationSpec.hs  MetadataSpec.hs  MonitorSpec.hs  OrganizationSpec.hs  RoleSpec.hs  ServiceSpec.hs  UserSpec.hs
