name:                   mackerel-client
version:                0.0.0
author:                 itchyny
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Web
build-type:             Simple
cabal-version:          >=1.8
synopsis:               An API client library for Mackerel (https://mackerel.io)
description:            This library provides bindings to Mackerel APIs.
                        .
                        The official site of Mackerel: https://mackerel.io/.
                        The reference of Mackerel API: https://mackerel.io/api-docs/.

library
  hs-source-dirs:       src
  ghc-options:          -Werror -Wall
  exposed-modules:      Web.Mackerel
                      , Web.Mackerel.Types
                      , Web.Mackerel.Types.Service
                      , Web.Mackerel.Types.Role
                      , Web.Mackerel.Internal.TH
  build-depends:        base >= 4.7 && < 5.0
                      , aeson

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4.7 && < 5.0
                      , mackerel-client
                      , aeson
                      , hspec

source-repository head
  type:     git
  location: git@github.com:itchyny/mackerel-client-hs.git
